deployment/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dont-give-up-chart
  labels:
    app: dont-give-up-chart
spec:
  selector:
    matchLabels:
      app: dont-give-up-chart
  replicas: 1
  template:
    metadata:
      name: dont-give-up-chart
      labels:
        app: dont-give-up-chart
    spec:
      containers:
        - name: dont-give-up-chart
          image: docker.io/ktking813/dont-give-up-chart:latest
          imagePullPolicy: Always
          ports:
            - name: port1
              containerPort: 8081
          resources:
            requests:
              cpu: 500m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1024Mi

---

apiVersion: v1
kind: Service
metadata:
  name: dont-give-up-chart
spec:
  type: ClusterIP
  selector:
    app: dont-give-up-chart
  ports:
    - name: dont-give-up-chart
      port: 8081
      targetPort: 8080

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dont-give-up-chart
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: dont-give-up-chart.165.192.105.60.nip.io
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: dont-give-up-chart
                port:
                  number: 8081
